# architect

./: .archfit.yaml  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  agentbundle.json  llm.txt  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: install.md  methodology.md  release-v0.1.md  report-format.md  scoring.md  tools.md
docs/dogfood/ccgram/: friction-2.md  friction.md  plan-2.md  plan.md  report-2.md  report.md
docs/plans/: 2026-05-22-architect-design.md  2026-05-22-architect-plan.md  20260620-architect-archfit-enhancement-plan.md
pkg/sumdb/sum.golang.org/: latest
scripts/: check-packages
scripts/evals/: prepare-skill-evals.py  summarize-skill-evals.py
scripts/git-hooks/: pre-commit  pre-push
scripts/release/: generate-release-notes.py  release-tag  stage_npm_packages.py
src/agents/: architect.md
src/agents/architect/: AGENT.md
src/architect_tools/: __init__.py  _contract.py  compare_reports.py  doctor.py  validate_report.py
src/plugins/architecture/: plugin.yaml
src/skills/architecture-design/: SKILL.md
src/skills/architecture-plan/: SKILL.md
src/skills/architecture-review/: SKILL.md
src/skills/architecture-scorecard/: SKILL.md
src/skills/methodology-balanced-coupling/: SKILL.md
src/skills/tools-archfit/: SKILL.md
src/skills/tools-code-search/: SKILL.md
src/skills/tools-codegraph/: SKILL.md
src/skills/tools-gitnexus/: SKILL.md
src/skills/tools-infra-operational/: SKILL.md
src/skills/tools-report-markdown/: SKILL.md
src/skills/tools-typescript/: SKILL.md
src/templates/: design.md  plan.md
tests/: test_build_runtime.py  test_instructions.py  test_npm_packages.py  test_release.py  test_scaffold.py  test_skill_evals.py  test_templates.py
tests/fixtures/plans/: example.md
tests/tools/: test_compare_reports.py  test_doctor.py  test_validate_report.py
(+53 files in other folders)
